--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,6 +133,70 @@ body{
     50% { border-color: $gold }
 }
 
+//prevent hover effect on mobile devices
+@media (hover: hover) {
+    button{
+        &:hover:disabled{
+            cursor: default;
+            opacity: 0.7;
+        }     
+    }
+
+    .selection-data{    
+        &:hover{
+            cursor: pointer;
+            color: $cool-white;
+            background-color: $blue-2;
+        }
+    }
+
+    .input-group{
+        button{
+            &:hover{
+                cursor: pointer;
+                color: $blue-4;
+                box-shadow: inset 0 2px 5px $color-12;
+            }
+        }
+    }
+    .switch-btn{
+        & button{
+            &:hover:disabled{
+                background-color: $gold;
+                box-shadow: 0 2px 5px $black;
+                cursor: default;
+                opacity: 0.7;
+            }
+            &:hover{
+                cursor: pointer;
+                background-color: $golden-yellow;
+                box-shadow: inset 0 2px 5px $black;
+            }
+        }
+    }
+    .clear, .cancel {
+        &:hover{
+            color: $golden-yellow;
+            box-shadow: inset 0 2px 5px $color-12;
+        }   
+    }
+    .search, .confirm {
+        &:hover{
+            color: $white;
+            background-color: $golden-yellow;
+            box-shadow: inset 0 2px 5px $color-12;
+        }
+        &:hover:disabled{
+            color: $cool-white;
+            background-color: $gold;
+            box-shadow: 0 2px 5px $color-11;
+            cursor: default;
+            opacity: 0.7;
+        }
+    }
+
+}   
+
 
 
 // extra Smaller devices
